--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "praieiro",
+  "name": "igniteteams",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -9,17 +9,28 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/native-stack": "^6.9.0",
+    "@types/react-native-vector-icons": "^6.4.12",
+    "@types/styled-components-react-native": "^5.1.3",
     "expo": "~46.0.9",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.5",
-    "react-native-web": "~0.18.7"
+    "react-native-gesture-handler": "^2.6.2",
+    "react-native-iphone-x-helper": "^1.3.1",
+    "react-native-safe-area-context": "^4.3.4",
+    "react-native-screens": "^3.17.0",
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-web": "~0.18.7",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.69.1",
+    "babel-plugin-module-resolver": "^4.1.0",
     "typescript": "~4.3.5"
   },
   "private": true
